--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <section class="container">
-            <div class="item-a">
+            <div class="left">
                 <div class="logo">
                     <a target="_blank" href="./img/logo-white.svg" >
                         <img src="./img/logo-white.svg">
@@ -18,12 +18,23 @@
                     <h2> Get Verified </h2>
                     <p>Getting verified isn't fun. This is why we want to make this your last time</p>
                     <p>Our process is easy and once verified, you can fund your wallet with fiat and start trading cryto today.</p>
-                    <p>Currently we only veriy users in the U.S., but we hoe to expand to other regions soon</p>
+                    <p>Currently we only veriy users in the U.S., but we hope to expand to other regions soon</p>
                 </div>
             </div>
-            <div class="item-b">
+            <div class="right">
                 <div class="login-container">
-                    
+                    <span style="line-height: 60px;
+                    padding-left: 250px;">
+                    Already have an account?
+                    </span>
+                    <div class="arrow-logo">
+                        <a href="#" class="login">Log In</a>
+                        <img class="arrow" src="./img/arrow-right-blue.svg">
+                    </div>
+
+                    <div class="boxes">
+                        
+                    </div>
                 </div>
             </div>
         </section>
