--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
                     </div>
 
                     <div class="boxes">
-                        
+                        <div class="basic-details">
+                            <form action="" class="contents" target="_self">
+                                <div class="box">
+                                    <div class="account-type-container">
+                                        <input type="radio" id="individual" name="personal" class="contents">
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+
                     </div>
                 </div>
             </div>
